--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container .header{
+  box-sizing: border-box;
+  position: relative;
+  background: #b3a7e7;
+  border-radius: 2px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: baseline;
 }
 
-.App-link {
-  color: #61dafb;
+.container .header .weather-today{
+ font-size: 40px;
+ text-align: center;
+ margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .header .search{
+  text-align: right;
+  margin: auto;
+  background-color: aqua;
+  border-radius: 50px;
+  width: 30%;
+  height: 64px;
+}
+
+.container .header .search .search-item{
+  text-align: center;
+
+}
+
+.button {
+  width: 20%;
+  height: 30px;
+  background: #ffffff;
+  border: 0;
+  border-radius: 8px;
+  color: #3545d4;
+  font-weight: 700;
+  margin-top: 16px;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 10px;
+  transition: 0.2s;
+}
+
+.container .side-bar{
+  border-radius: 50px;
+  box-sizing: border-box;
+  position: relative;
+  width: 144px;
+  height: 946px;
+  background: #e3e2e2;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
 }
