--- a/src/Maps/Maps.css
+++ b/src/Maps/Maps.css
@@ -16,3 +16,10 @@
     width: 100%;
     padding: 0.5rem;
 }
+
+.daily-temp{
+    position: absolute;
+    top: 50px;
+    z-index: 10;
+    width: 300px;
+}
