--- a/src/Maps/DailyTemp.css
+++ b/src/Maps/DailyTemp.css
@@ -1,8 +1,18 @@
 .daily-list {
     background-color: white;
-    margin: auto;
+    margin-left: 10px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-
-    
+    height: 50px;
+    width: 120px;
+    list-style: none;
+    padding-left: 5px;
 }
 
+.daily-temp-container {
+    margin-top: 60px;
+
+}
+
+.daily-list p{
+    margin: 0;
+}
